data/derived/comb/progs/unify/prog5812.ml.out
Characters 59-73:
  | (h :: t) -> h :: sumList t;;
                ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
